[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Pisek <psk.light@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.0"
uvicorn = "0.22.0"
pydantic = "2.7.1"
python-multipart = "0.0.9"
python-socketio = "^5.12.1"
grpcio = "^1.71.0"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
requests = "2.32.2"
aiohttp = "3.9.5"
httpx = "^0.28.1"
openai = "^1.66.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
